# python-mqtt-adafruit

./: .gitignore  README.md  main.py  pyproject.toml
src/: ai_provider.py  alert.py  config.py  gateway.py  main.py  mqtt-test.py  providers.py  serial_provider.py  stream_server.py
