[project]
name = "python-mqtt-adafruit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adafruit-io>=3.0.0",
    "dotenv>=0.9.9",
    "opencv-python>=4.13.0.92",
    "pyserial>=3.5",
    "ultralytics>=8.4.30",
    "torch==2.10.0+cu130",
    "torchvision==0.25.0+cu130",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true